--- a/assets/css/gernerally.css
+++ b/assets/css/gernerally.css
@@ -1,17 +1,19 @@
-    /* Add a gray background color and some padding to the footer */
+/* Add a gray background color and some padding to the footer */
     footer {     
-      background-color: #3399CC;
+      background-color: #166398;
       padding: 25px;
       
     }
     .carousel-inner img {
       width: 100%; /* Set width to 100% */
-      min-height: 200px;
+      min-height: 150px;
+
     }
     /* Hide the carousel text when the screen is less than 600 pixels wide */
     @media (max-width: 600px) {
       .carousel-caption {
-        display: none; 
+        display: block; 
+        font-size: 16px;
     }
 
 }.tm-green-btn{
@@ -21,21 +23,18 @@
         padding: 5px 5px;
         font-family: 'Kanit', sans-serif;
         margin-top: -5px;
+        border-radius: 5px;
 
 }.tm-green-btn:hover,
-            .tm-green-btn:focus {
-        background-color: #3399CC;
-        border: solid;
-        border-width: 1px;
-        border-color: #fff;
-        color:#fff;
-        margin-top: -5px;
+  .tm-green-btn:focus {
+        box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
       } .well p{
         text-indent: 20px;
       }a{
-        color: #FF9900;
+        color: #166398;
       }a:hover{
-        color: #ff3f00;
+        color: #000542;
+
       }#bgCard{
         background:#cccccc;
         background-repeat: no-repeat;
@@ -52,9 +51,6 @@
         color: white;
       }.nav>li>a:hover,.nav>li>a:focus{
         color: #3399CC;
-      }.carousel-caption>h1{
-        color:white;
-        text-shadow: 0.1em 0.1em 0.2em black;
       }.container {
   margin-right: auto;
   margin-left: auto;
@@ -206,35 +202,185 @@
         width: 100%;
     }
 }p.border-1{
-    border: 1px solid orange;
+    border: 1px solid #166398;
     border-radius: 8px;
     padding: 5px;
+
 }.indent>p,p.indent,hr.indent,.indent>hr{
     text-indent:50px;
-  }.indent-2>p,p.indent-2{
+  }.indent-2>p,p.indent-2,.indent-2>li,li.indent-2{
     text-indent:25px;
   }.indent-3>p,p.indent-3{
     text-indent:75px;
   }.mySlides {display:none
 
   }
-.demo {cursor:pointer}
-.w3-content{max-width:980px;margin:auto}
-.w3-row-padding:after,.w3-row-padding:before{content:"";display:table;clear:both}
-.w3-row-padding,.w3-row-padding>.w3-half,.w3-row-padding>.w3-third,.w3-row-padding>.w3-twothird,.w3-row-padding>.w3-threequarter,.w3-row-padding>.w3-quarter,.w3-row-padding>.w3-col{padding:0 8px}
-.w3-section{margin-top:16px!important;margin-bottom:16px!important}
-.w3-col,.w3-half,.w3-third,.w3-twothird,.w3-threequarter,.w3-quarter{float:left;width:100%}
-.w3-col.s1{width:8.33333%}.w3-col.s2{width:16.66666%}.w3-col.s3{width:24.99999%}.w3-col.s4{width:33.33333%}
-.w3-col.s5{width:41.66666%}.w3-col.s6{width:49.99999%}.w3-col.s7{width:58.33333%}.w3-col.s8{width:66.66666%}
-.w3-col.s9{width:74.99999%}.w3-col.s10{width:83.33333%}.w3-col.s11{width:91.66666%}.w3-col.s12{width:99.99999%}
-@media (min-width:601px){.w3-col.m1{width:8.33333%}.w3-col.m2{width:16.66666%}.w3-col.m3,.w3-quarter{width:24.99999%}.w3-col.m4,.w3-third{width:33.33333%}
-.w3-col.m5{width:41.66666%}.w3-col.m6,.w3-half{width:49.99999%}.w3-col.m7{width:58.33333%}.w3-col.m8,.w3-twothird{width:66.66666%}
-.w3-col.m9,.w3-threequarter{width:74.99999%}.w3-col.m10{width:83.33333%}.w3-col.m11{width:91.66666%}.w3-col.m12{width:99.99999%}}
-@media (min-width:993px){.w3-col.l1{width:8.33333%}.w3-col.l2{width:16.66666%}.w3-col.l3{width:24.99999%}.w3-col.l4{width:33.33333%}
-.w3-col.l5{width:41.66666%}.w3-col.l6{width:49.99999%}.w3-col.l7{width:58.33333%}.w3-col.l8{width:66.66666%}
-.w3-col.l9{width:74.99999%}.w3-col.l10{width:83.33333%}.w3-col.l11{width:91.66666%}.w3-col.l12{width:99.99999%}}
-.w3-opacity,.w3-hover-opacity:hover{opacity:0.60}.w3-opacity-off,.w3-hover-opacity-off:hover{opacity:1}
-.w3-opacity-max{opacity:0.25}.w3-opacity-min{opacity:0.75}
+.demo {
+    cursor: pointer
+}
+.w3-content {
+    max-width: 980px;
+    margin: auto
+}
+.w3-row-padding:after,
+.w3-row-padding:before {
+    content: "";
+    display: table;
+    clear: both
+}
+.w3-row-padding,
+.w3-row-padding>.w3-half,
+.w3-row-padding>.w3-third,
+.w3-row-padding>.w3-twothird,
+.w3-row-padding>.w3-threequarter,
+.w3-row-padding>.w3-quarter,
+.w3-row-padding>.w3-col {
+    padding: 0 8px
+}
+.w3-section {
+    margin-top: 16px!important;
+    margin-bottom: 16px!important
+}
+.w3-col,
+.w3-half,
+.w3-third,
+.w3-twothird,
+.w3-threequarter,
+.w3-quarter {
+    float: left;
+    width: 100%
+}
+.w3-col.s1 {
+    width: 8.33333%
+}
+.w3-col.s2 {
+    width: 16.66666%
+}
+.w3-col.s3 {
+    width: 24.99999%
+}
+.w3-col.s4 {
+    width: 33.33333%
+}
+.w3-col.s5 {
+    width: 41.66666%
+}
+.w3-col.s6 {
+    width: 49.99999%
+}
+.w3-col.s7 {
+    width: 58.33333%
+}
+.w3-col.s8 {
+    width: 66.66666%
+}
+.w3-col.s9 {
+    width: 74.99999%
+}
+.w3-col.s10 {
+    width: 83.33333%
+}
+.w3-col.s11 {
+    width: 91.66666%
+}
+.w3-col.s12 {
+    width: 99.99999%
+}
+@media (min-width: 601px) {
+    .w3-col.m1 {
+        width: 8.33333%
+    }
+    .w3-col.m2 {
+        width: 16.66666%
+    }
+    .w3-col.m3,
+    .w3-quarter {
+        width: 24.99999%
+    }
+    .w3-col.m4,
+    .w3-third {
+        width: 33.33333%
+    }
+    .w3-col.m5 {
+        width: 41.66666%
+    }
+    .w3-col.m6,
+    .w3-half {
+        width: 49.99999%
+    }
+    .w3-col.m7 {
+        width: 58.33333%
+    }
+    .w3-col.m8,
+    .w3-twothird {
+        width: 66.66666%
+    }
+    .w3-col.m9,
+    .w3-threequarter {
+        width: 74.99999%
+    }
+    .w3-col.m10 {
+        width: 83.33333%
+    }
+    .w3-col.m11 {
+        width: 91.66666%
+    }
+    .w3-col.m12 {
+        width: 99.99999%
+    }
+}
+@media (min-width: 993px) {
+    .w3-col.l1 {
+        width: 8.33333%
+    }
+    .w3-col.l2 {
+        width: 16.66666%
+    }
+    .w3-col.l3 {
+        width: 24.99999%
+    }
+    .w3-col.l4 {
+        width: 33.33333%
+    }
+    .w3-col.l5 {
+        width: 41.66666%
+    }
+    .w3-col.l6 {
+        width: 49.99999%
+    }
+    .w3-col.l7 {
+        width: 58.33333%
+    }
+    .w3-col.l8 {
+        width: 66.66666%
+    }
+    .w3-col.l9 {
+        width: 74.99999%
+    }
+    .w3-col.l10 {
+        width: 83.33333%
+    }
+    .w3-col.l11 {
+        width: 91.66666%
+    }
+    .w3-col.l12 {
+        width: 99.99999%
+    }
+}
+.w3-opacity,
+.w3-hover-opacity:hover {
+    opacity: 0.60
+}
+.w3-opacity-off,
+.w3-hover-opacity-off:hover {
+    opacity: 1
+}
+.w3-opacity-max {
+    opacity: 0.25
+}
+.w3-opacity-min {
+    opacity: 0.75
+}
 .w3-col.s2>img{
   border: 1px dashed ;
   border-color: black;
@@ -243,11 +389,18 @@
   border-color: black;
 }.text-left>p,p.text-left{
   text-align: left;
-}.border-1{
-    border: 1px solid orange;
+}.border-blue{
+    border: 1px solid #166398;
     border-radius: 8px;
     padding-top:  15px;
-    background-color: #FFFFCC;
+    background-color: #e3e1f2;
+    /* blue */
+}.border-1{
+    border: 1px solid #166398;
+    border-radius: 8px;
+    padding-top:  15px;
+    background-color: #d3daff;
+    /* red */
 }
 div.messageblue
 {
@@ -259,7 +412,7 @@ div.messageblue
   background-color: #f5fffa;
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
-  width:720px;
+ 
 }div.messageblue div.idea
 {
   color: #003399;
@@ -272,7 +425,7 @@ div.messageblue div.idea label
   color: #003399;
 }.border-2{
     border: double;
-    border-color: orange;
+    border-color: #cef2e0;
     border-radius: 8px;
     padding-top:  15px;
 }input.border-input,select.border-select{
@@ -280,7 +433,7 @@ div.messageblue div.idea label
 
 }.border-3{
   border: double;
-    border-color: #3399CC;
+    border-color: #cc0000;
     border-radius: 8px;
     padding-top:  15px;
 }input:focus,textarea:focus{
@@ -291,4 +444,282 @@ div.messageblue div.idea label
 }select:focus{
     border: 1px #3366CC solid;
    color: #3366CC;
+}.icon-lang {
+    display: inline-block;
+    vertical-align: middle;
+    width: 24px;
+    height: 24px;
+    background-color: #e6e6e6;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+    overflow: hidden;
+}
+.icon-lang.th {
+    background-size: 100%;
+    background-image: url(../../assets/images/icons/th.png);
+}
+.icon-lang.en {
+    background-size: 100%;
+    background-image: url(../../assets/images/icons/uk.png);
+}.navbar-default .navbar-nav > li.lang-divider {
+    border-top: 1px solid #E7E7E7;
+    padding: 10px 15px;
+    line-height: 20px;
+    text-align: center;
+
+}.visible-xs {
+  display: none !important;
+}
+/* award secure */
+div.gallery {
+    border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px){
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+@media only screen and (max-width: 500px){
+    .responsive {
+        width: 100%;
+    }
+}
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}ol { counter-reset: item }
+ol>li{ display: block }
+ol>li:before { content: counters(item, ".") " "; counter-increment: item }
+@media (min-width: 768px) {
+.lang-label {
+        display: none;
+    }
+  }
+hr{
+  border-color: #cc0000;
+}ul.b{
+  list-style-type: square;
+  }.clWhite{
+    color: white;
+  }#bgUnderFoot{
+    background-color: #000;
+  }.footer-contact > strong  {
+    display: inline-block;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    font-weight: 400;
+    color: white;
+  }.footer-contact{
+    color: white;
+  }#verify_math{
+    display:block;
+    height:21px;    
+}
+#verify_math span{
+    display:block;
+    height:21px;    
+    width:30px;
+    position:relative;
+    float:left;
+    text-align:center;
+    line-height:20px;
+    color:#000;
+}
+#verify_math span.digital{
+    background:url(../../assets/images/captcha/digi_img.jpg) left top no-repeat; 
+}
+
+  #myImg {
+                border-radius: 5px;
+                cursor: pointer;
+                transition: 0.3s;
+            }
+            #myImg:hover {opacity: 0.7;}
+            /* The Modal (background) */
+            .modal1 {
+                display: none; /* Hidden by default */
+                position: fixed; /* Stay in place */
+                z-index: 1; /* Sit on top */
+                padding-top: 100px; /* Location of the box */
+                left: 0;
+                top: 0;
+                width: 100%; /* Full width */
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+            }
+            /* Modal Content (image) */
+            .modal1-content1 {
+                margin: auto;
+                display: block;
+                width: 80%;
+                max-width: 700px;
+            }
+            /* Caption of Modal Image */
+            #caption1 {
+                margin: auto;
+                display: block;
+                width: 80%;
+                max-width: 700px;
+                text-align: center;
+                color: #ccc;
+                padding: 10px 0;
+                height: 150px;
+            }
+            /* Add Animation */
+            .modal1-content1, #caption1 {    
+                -webkit-animation-name: zoom;
+                -webkit-animation-duration: 0.6s;
+                animation-name: zoom;
+                animation-duration: 0.6s;
+            }
+            @-webkit-keyframes zoom {
+                from {-webkit-transform:scale(0)} 
+                to {-webkit-transform:scale(1)}
+            }
+            @keyframes zoom {
+                from {transform:scale(0)} 
+                to {transform:scale(1)}
+            }
+            /* The Close Button */
+            .close1 {
+                position: absolute;
+                top: 15px;
+                right: 35px;
+                color: #f1f1f1;
+                font-size: 40px;
+                font-weight: bold;
+                transition: 0.3s;
+            }
+            .close:hover,
+            .close:focus {
+                color: #bbb;
+                text-decoration: none;
+                cursor: pointer;
+            }
+            /* 100% Image Width on Smaller Screens */
+            @media only screen and (max-width: 700px){
+                .modal1-content1 {
+                    width: 100%;
+                }
+            }
+            .border-bottom{
+                border-style: dotted;
+                border-color: #7f7f7f;
+                border-top-width: 0px;
+                border-left-width: 0px;
+                border-right-width: 0px;
+                border-bottom-width: 1px;
+            }.border-right{
+                border-style: dotted;
+                border-color: #cc0000;
+                border-top-width: 0px;
+                border-left-width: 0px;
+                border-right-width: 1px;
+                border-bottom-width: 0px;
+            } .border-bottom-hr{
+                border-style: inset;
+                border-color: #c4c0c0;
+                border-top-width: 0px;
+                border-left-width: 0px;
+                border-right-width: 0px;
+                border-bottom-width: 2px;
+            }@media only screen and (max-width: 700px){
+                .border-right{
+                border-style: dotted;
+                border-color: #cc0000;
+                border-top-width: 0px;
+                border-left-width: 0px;
+                border-right-width: 0px;
+                border-bottom-width: 1px;
+            }
+            }.border-content{
+                border-style: dotted;
+                border-color: #fff;
+                background-color: #fff;
+
+            }.bg-img{
+                /* background-image: url(../../assets/images/bg3.png);
+                background-position: center;
+                text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+                 166398 */
+                  border-style: inset;
+                border-color: #cc0000;
+                border-top-width: 0px;
+                border-left-width: 0px;
+                border-right-width: 0px;
+                border-bottom-width: 5px;
+                background-color: #f4f4f4;
+               
+            }.bg-color{
+                background-color: white;
+            }.border-top{
+                 border-style: inset;
+                border-color: #cc0000;
+                border-top-width: 5px;
+                border-left-width: 0px;
+                border-right-width: 0px;
+                border-bottom-width: 0px;  
+            }.border-bottom-red{
+                 border-style: inset;
+                border-color: #c93434;
+                border-top-width: 0px;
+                border-left-width: 0px;
+                border-right-width: 0px;
+                border-bottom-width: 1.5px;  
+            }
+            #scroll {
+    position:fixed;
+    right:10px;
+    bottom:10px;
+    cursor:pointer;
+    width:50px;
+    height:50px;
+    background-color:#cc0000;
+    text-indent:-9999px;
+    display:none;
+    -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+    border-radius:60px
+}
+#scroll span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#ffffff;
+}
+#scroll:hover {
+    background-color:#e74c3c;
+   opacity:1;filter:"alpha(opacity=100)";
+    -ms-filter:"alpha(opacity=100)";
 }
