--- a/assets/css/gernerally.css
+++ b/assets/css/gernerally.css
@@ -178,6 +178,179 @@
 
 
 */
+.demo {
+    cursor: pointer
+}
+.w3-content {
+    max-width: 980px;
+    margin: auto
+}
+.w3-row-padding:after,
+.w3-row-padding:before {
+    content: "";
+    display: table;
+    clear: both
+}
+.w3-row-padding,
+.w3-row-padding>.w3-half,
+.w3-row-padding>.w3-third,
+.w3-row-padding>.w3-twothird,
+.w3-row-padding>.w3-threequarter,
+.w3-row-padding>.w3-quarter,
+.w3-row-padding>.w3-col {
+    padding: 0 8px
+}
+.w3-section {
+    margin-top: 16px!important;
+    margin-bottom: 16px!important
+}
+.w3-col,
+.w3-half,
+.w3-third,
+.w3-twothird,
+.w3-threequarter,
+.w3-quarter {
+    float: left;
+    width: 100%
+}
+.w3-col.s1 {
+    width: 8.33333%
+}
+.w3-col.s2 {
+    width: 16.66666%
+}
+.w3-col.s3 {
+    width: 24.99999%
+}
+.w3-col.s4 {
+    width: 33.33333%
+}
+.w3-col.s5 {
+    width: 41.66666%
+}
+.w3-col.s6 {
+    width: 49.99999%
+}
+.w3-col.s7 {
+    width: 58.33333%
+}
+.w3-col.s8 {
+    width: 66.66666%
+}
+.w3-col.s9 {
+    width: 74.99999%
+}
+.w3-col.s10 {
+    width: 83.33333%
+}
+.w3-col.s11 {
+    width: 91.66666%
+}
+.w3-col.s12 {
+    width: 99.99999%
+}
+@media (min-width: 601px) {
+    .w3-col.m1 {
+        width: 8.33333%
+    }
+    .w3-col.m2 {
+        width: 16.66666%
+    }
+    .w3-col.m3,
+    .w3-quarter {
+        width: 24.99999%
+    }
+    .w3-col.m4,
+    .w3-third {
+        width: 33.33333%
+    }
+    .w3-col.m5 {
+        width: 41.66666%
+    }
+    .w3-col.m6,
+    .w3-half {
+        width: 49.99999%
+    }
+    .w3-col.m7 {
+        width: 58.33333%
+    }
+    .w3-col.m8,
+    .w3-twothird {
+        width: 66.66666%
+    }
+    .w3-col.m9,
+    .w3-threequarter {
+        width: 74.99999%
+    }
+    .w3-col.m10 {
+        width: 83.33333%
+    }
+    .w3-col.m11 {
+        width: 91.66666%
+    }
+    .w3-col.m12 {
+        width: 99.99999%
+    }
+}
+@media (min-width: 993px) {
+    .w3-col.l1 {
+        width: 8.33333%
+    }
+    .w3-col.l2 {
+        width: 16.66666%
+    }
+    .w3-col.l3 {
+        width: 24.99999%
+    }
+    .w3-col.l4 {
+        width: 33.33333%
+    }
+    .w3-col.l5 {
+        width: 41.66666%
+    }
+    .w3-col.l6 {
+        width: 49.99999%
+    }
+    .w3-col.l7 {
+        width: 58.33333%
+    }
+    .w3-col.l8 {
+        width: 66.66666%
+    }
+    .w3-col.l9 {
+        width: 74.99999%
+    }
+    .w3-col.l10 {
+        width: 83.33333%
+    }
+    .w3-col.l11 {
+        width: 91.66666%
+    }
+    .w3-col.l12 {
+        width: 99.99999%
+    }
+}
+.w3-opacity,
+.w3-hover-opacity:hover {
+    opacity: 0.60
+}
+.w3-opacity-off,
+.w3-hover-opacity-off:hover {
+    opacity: 1
+}
+.w3-opacity-max {
+    opacity: 0.25
+}
+.w3-opacity-min {
+    opacity: 0.75
+}
+.w3-col.s2>img{
+  border: 1px dashed ;
+  border-color: black;
+}.w3-content>img{
+      border: 1px dashed ;
+  border-color: black;
+}
     footer {     
       background-color: #166398;
       padding: 25px;
@@ -199,24 +372,26 @@
 
 }.tm-green-btn{
         background-color: #fff;
-        border: none;
-        color: #3399CC;
+        border: solid;
+        border-width: 2px;
+        color: #166398;
         padding: 5px 5px;
         font-family: 'Kanit', sans-serif;
         margin-top: -5px;
         border-radius: 5px;
 
+
 }.tm-green-btn:hover,
   .tm-green-btn:focus {
         box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
        
-        border-color: #fff;
+        border-color: #166398;
         background-color: #166398;
         color: #fff;
       } .well p{
         text-indent: 20px;
       }a{
-        color: #166398;
+        color: #cc0000;
       }a:hover{
         color: #000542;
 
@@ -340,7 +515,7 @@
         width: 100%;
     }
 }p.border-1{
-    border: 1px solid #166398;
+    border: 1px solid #cc0000;
     border-radius: 8px;
     padding: 5px;
 
@@ -362,10 +537,10 @@
     background-color: #e3e1f2;
     /* blue */
 }.border-1{
-    border: 1px solid #166398;
+    border: 1px solid #cc0000;
     border-radius: 8px;
     padding-top:  15px;
-    background-color: #d3daff;
+    background-color: #ffe0e0;
     /* red */
 }
 div.messageblue
@@ -493,6 +668,7 @@ ol>li:before { content: counters(item, ".") " "; counter-increment: item }
   }
 hr{
   border-color: #cc0000;
+  border-width: 2.5px;
 }ul.b{
   list-style-type: square;
   }.clWhite{
@@ -614,6 +790,13 @@ hr{
                 border-left-width: 0px;
                 border-right-width: 1px;
                 border-bottom-width: 0px;
+            }.border-right-blue{
+                border-style: dotted;
+                border-color: #166398;
+                border-top-width: 0px;
+                border-left-width: 0px;
+                border-right-width: 1px;
+                border-bottom-width: 0px;
             } .border-bottom-hr{
                 border-style: inset;
                 border-color: #c4c0c0;
@@ -641,12 +824,14 @@ hr{
                 text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
                  166398 */
                   border-style: inset;
-                border-color: #cc0000;
-                border-top-width: 0px;
+                border-bottom-color: #cc0000;
+                border-top-color: #ededed;
+                border-top-style: outset;
+                border-top-width: 1px;
                 border-left-width: 0px;
                 border-right-width: 0px;
                 border-bottom-width: 5px;
-                background-color: #f4f4f4;
+                background-color: #f4f4f4; /* f4f4f4 */
                
             }.bg-img{
                 /* background-image: url(../../assets/images/bg3.png);
@@ -657,7 +842,7 @@ hr{
                 background-color: #f4f4f4;
                
             }.bg-img2{
-                background-image: url(../../assets/images/footer/imgContent.png);
+                background-image: url(../../assets/images/footer/second.png);
                 width: 100%;
                 background-repeat: no-repeat;
             }
@@ -670,13 +855,13 @@ hr{
                 border-left-width: 0px;
                 border-right-width: 0px;
                 border-bottom-width: 0px;  
-            }.border-bottom-red{
+            }.border-bottom-blue{
                  border-style: inset;
-                border-color: #c93434;
+                border-color: #166398;
                 border-top-width: 0px;
                 border-left-width: 0px;
                 border-right-width: 0px;
-                border-bottom-width: 1.5px;  
+                border-bottom-width: 4px;  
             }
             #scroll {
     position:fixed;
@@ -722,7 +907,11 @@ hr{
     color: white;
     font-size: 18px;
     letter-spacing: 0.05cm;
-}#content-footer a,#content-footer h4{
+}.font-blue{
+    color: #166398;
+    font-size: 16px;
+    letter-spacing: 0.05cm;
+    }#content-footer a,#content-footer h4,#content-footer h5,#content-footer h2{
     color: #99CCCC;
 }.tm-red-btn{
         
@@ -734,7 +923,7 @@ hr{
         font-family: 'Kanit', sans-serif;
         font-size: 26px;
         margin-top: -5px;
-        border-radius: 15px;
+        border-radius: 8px;
 
 }.tm-red-btn:hover,
   .tm-red-btn:focus {
@@ -742,17 +931,26 @@ hr{
         border-style: solid ;
         border-width: 2px;
         border-color: #cc0000;
-        background: rgba(0, 0, 0, 0);
-        color: #cc0000;
+        background: #cc0000;
+        color: #fff;
       } .well p{
         text-indent: 20px;
-      }a{
-        color: #166398;
-      }a:hover{
-        color: #000542;
-
       }
       .bg-color-blue{
         background-color: #166398;
         
+      }
+      .bg-content-1{
+        background-image: url(../../assets/images/bg-content.png);
+        background-repeat: no-repeat;
+        width: 100%;
+      }.btn-content-width{
+        height: 40px;
+        width:100%;
+        font-size: 20px;
+        background-color: rgba(0,0,0,0);
+        !important;
+      }.border-module-content{
+        border-style: dotted;
+                border-color: #7f7f7f;
       }
