--- a/assets/css/gernerally.css
+++ b/assets/css/gernerally.css
@@ -202,7 +202,8 @@
 }
 .w3-section {
     margin-top: 16px!important;
-    margin-bottom: 16px!important
+    margin-bottom: 16px!important;
+    background-blend-mode: 
 }
 .w3-col,
 .w3-half,
